# AppXchange

./: apps.json  auth.json  authutil.py  main.py  manifesto.md  pyproject.toml  readme.md  sendutil.py  test.py  used.exar
VMDRIVE/uot/: uo4.html
static/: apps.css  both.css  description.css  index.css  private.css  signup.css  topnav.css
static/DB/AppDB/DEYOJR/: ratings.txt
static/DB/AppDB/JOQPOQ/: ratings.txt
templates/: account.html  apply.html  apps.html  auth.html  description.html  dwn.html  index.html  login.html  message.html  mut.html  private.html  purethanks.html  test.html  thank.html  transfer.html
